# aihero

./: .gitignore  CLAUDE.md  README.md  generate_synthetic_questions.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-environment-setup/: 01-01-PLAN.md
.planning/phases/04-course-validation/: 04-02-PLAN.md
.planning/phases/05-project-homework/: 05-01-PLAN.md
.planning/phases/08-semantic-chunking/: 08-01-PLAN.md  08-02-PLAN.md
.planning/phases/09-llm-chunking/: 09-01-PLAN.md
.planning/phases/11-project-homework/: 11-01-PLAN.md  11-01-SUMMARY.md  11-VALIDATION.md
.planning/phases/12-documentation-synthesis/: 12-01-PLAN.md
.planning/phases/13-dependencies-setup/: 13-01-PLAN.md  13-01-SUMMARY.md  13-CONTEXT.md  13-DISCUSSION-LOG.md
.planning/phases/14-text-search-foundation/: 14-01-PLAN.md  14-01-SUMMARY.md  14-CONTEXT.md  14-DISCUSSION-LOG.md
.planning/phases/15-vector-search-integration/: 15-CONTEXT.md  15-DISCUSSION-LOG.md
app/: .gitignore  app.py  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
course/: README.md  day1.ipynb  day1.py  day2.ipynb  day2.py  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb  day7.ipynb  pyproject.toml
course/data/embeddings/: datatalk_faq.npy  evidently_docs.npy
course/data/test_data/: manual_qa_pairs.json  synthetic_questions.json
docs/: streaming-pattern.md
docs/diagrams/: agent-tool-architecture.md  app-architecture-module-relationships.md  educational-notebook-structure.md  github-ingestion-pipeline.md  hybrid-chunking-strategy.md  hybrid-search-rrf-fusion.md  llm-api-chunking-costs.md  llm-as-a-judge-evaluation-flow.md  manual-agent-loop-flow.md  paragraph-section-comparison.md  phase-03-data-flow.md  pydantic-ai-migration-comparison.md  sliding-window-token-counting.md  text-search-foundation.md  vector-search-integration.md  verification-only-workflow.md
project/: .gitignore  .pre-commit-config.yaml  README.md  main.py  owasp_homework.ipynb  pyproject.toml
project/data/test_data/: owasp_manual_qa.json  owasp_synthetic_qa.json
project/src/aihero/: __init__.py  evaluation.py  logging.py  question_generator.py  test_data.py
project/tests/: conftest.py  test_evaluation.py
