[project]
name = "aihero-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "minsearch>=0.0.10",
    "openai>=2.31.0",
    "pydantic-ai>=1.82.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
