[project]
name = "aihero-course"
version = "0.1.0"
description = "AI Hero RAG course - Day 1 GitHub data ingestion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
]
