[project]
name = "aihero-course"
version = "0.1.0"
description = "AI Hero RAG course - Day 1 GitHub data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "python-frontmatter>=1.1.0",
    "tiktoken==0.12.0",
    "openai==2.30.0",
    "groq==1.1.2",
    "minsearch==0.0.10",
    "sentence-transformers==5.3.0",
    "torch>=2.0.0",
    "pydantic-ai>=1.77.0",
    "pandas>=3.0.2",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
]
