[project]
name = "aihero-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-frontmatter>=1.1.0",
    "requests>=2.32.0",
    "tiktoken==0.12.0",
    "openai==2.30.0",
    "groq==1.1.2",
    "minsearch==0.0.10",
    "sentence-transformers==5.3.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.3.1",
    "jupyter>=1.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = false

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101"]
